--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,7 @@
         "symfony/css-selector": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5",
-        "composer/composer": "dev-master"
-    },
-    "config": {
-        "bin-dir": "bin"
+        "phpunit/phpunit": "~4.5"
     },
     "bin": [
         "bin/balancermanager"
