--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/config": "2.7.*",
-        "symfony/console": "2.7.*",
-        "symfony/dependency-injection": "2.7.*",
-        "symfony/dom-crawler": "2.7.*",
         "guzzle/guzzle": "3.9.*",
-        "symfony/css-selector": "^2.7"
+        "symfony/config": "~2.4",
+        "symfony/console": "~2.4",
+        "symfony/css-selector": "~2.4",
+        "symfony/dependency-injection": "~2.4",
+        "symfony/dom-crawler": "~2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
