--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "phpunit/phpunit": "~4.5"
     },
     "bin": [
-        "bin/balancermanager"
+        "bin/balancermanager",
+        "bin/balancermanager.php"
     ]
 }
