--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -13,6 +13,12 @@
     syntaxCheck                 = "false"
     bootstrap                   = "../src/bootstrap.php" >
 
+    <testsuites>
+        <testsuite name="Load balancer Test Suite">
+            <directory>./</directory>
+        </testsuite>
+    </testsuites>
+
     <filter>
         <whitelist>
             <directory>../src</directory>
